--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="Pretty.html"><h1>YU Archive</h1></a>
+			<a href="index.html"><h1>YU Archive</h1></a>
 		</header>
 		<div>
 			<h2>Which YU is of interest to you?</h2>
