--- a/Yu77.html
+++ b/Yu77.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<header>
-			<a href="Pretty.html"><h1>YU Archive</h1></a>
+			<a href="index.html"><h1>YU Archive</h1></a>
 		</header>
 		<div class="wideDiv">
 			<img src="Yu77.png">
