--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
 				case "1":
 				location.href = "Yu01.html"
 				break;
+				case "7":
+				location.href = "Yu07.html"
+				break;
 				default:
 				YuID.innerHTML="NoData";
 				}
