--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
 				case "7":
 				location.href = "Yu07.html"
 				break;
+				case "19":
+				location.href = "Yu19.html"
+				break;
 				case "999999":
 				location.href = "Error.html"
 				break;
