--- a/Yu01.html
+++ b/Yu01.html
@@ -14,6 +14,24 @@
 			<p class="description">
 Yu-01 is broken beyond repair. No one has a clue what happened to her and the subject itself cannot communicate.
 			</p>
+			<p class="description">
+			-----------------------------------------------------------------------
+			</p>
+			<p class="description">
+Last Location: ERROR
+			</p>
+			<p class="description">
+Current state: semi-active
+			</p>
+			<p class="description">
+Likes: N/A
+			</p>
+			<p class="description">
+Dislikes: N/A
+			</p>
+			<p class="description">
+Notes: N/A
+			</p>
 		</div>
 	</body>
 </html>
