--- a/Yu07.html
+++ b/Yu07.html
@@ -35,5 +35,31 @@ Dislikes: N/A
 Notes: N/A
 			</p>
 		</div>
+		<div class="wideDiv">
+			<img src="Yu07H.png">
+			<h1 class="description">Yu-7-H</h1>
+			<p class="description">
+Yu-7-H is a Yu-7 subclass. Everything except appearance is the same as Yu-7. Glitch anomalies are reported more often. 
+The condition of this Yu is questionable. The subject has a painted on smile and glows significally more than others.
+			</p>
+			<p class="description">
+			-----------------------------------------------------------------------
+			</p>
+			<p class="description">
+Last Location: N/A
+			</p>
+			<p class="description">
+Current state: Inactive
+			</p>
+			<p class="description">
+Likes: N/A
+			</p>
+			<p class="description">
+Dislikes: N/A
+			</p>
+			<p class="description">
+Notes: N/A
+			</p>
+		</div>
 	</body>
 </html>
