--- a/Yu19.html
+++ b/Yu19.html
@@ -16,6 +16,24 @@ Yu-19 is barely a Yu at all. The body is made from a different metal, the Yu is 
 "Aperture Science" stickers all over it. It's also capable of understanding advanced chemistry and physics. We're not
 sure how it got here in the first place, but we sent it back to Aperture Laboratories the day we found her.
 			</p>
+			<p class="description">
+			-----------------------------------------------------------------------
+			</p>
+			<p class="description">
+Last Location: Aperture Laboratories
+			</p>
+			<p class="description">
+Current state: Active
+			</p>
+			<p class="description">
+Likes: Puzzles
+			</p>
+			<p class="description">
+Dislikes: Books
+			</p>
+			<p class="description">
+Notes: N/A
+			</p>
 		</div>
 	</body>
 </html>
