--- a/Yu25.html
+++ b/Yu25.html
@@ -9,28 +9,29 @@
 			<a href="index.html"><h1>YU Archive</h1></a>
 		</header>
 		<div class="wideDiv">
-			<img src="Yu87.png">
-			<h1 class="description">Yu-87</h1>
+			<img src="Yu25.png">
+			<h1 class="description">Yu-25</h1>
 			<p class="description">
-Yu-87 is only a speculation and a myth along the "Yu species".
+Yu-25 is... different. The body doesn't look like anything from the other Yus, the subject is purple and her ears
+are disabled speakers. Although the subject has a mouth, it does not speak.
 			</p>
 			<p class="description">
 			-----------------------------------------------------------------------
 			</p>
 			<p class="description">
-Last Location: N/A
+Last Location: ███████'█ █████
 			</p>
 			<p class="description">
-Current state: N/A
+Current state: Inactive
 			</p>
 			<p class="description">
-Likes: N/A
+Likes: Lights
 			</p>
 			<p class="description">
 Dislikes: N/A
 			</p>
 			<p class="description">
-Notes: N/A
+Notes: Tends to stalk people.
 			</p>
 		</div>
 	</body>
