--- a/Yu64.html
+++ b/Yu64.html
@@ -9,7 +9,7 @@
 			<a href="index.html"><h1>YU Archive</h1></a>
 		</header>
 		<div class="wideDiv">
-			<img src="YuE.png">
+			<img src="Yu64.png">
 			<h1 class="description">Yu-64</h1>
 			<p class="description">
 Yu-64 appears to be a "Neko" of asian descent.
