--- a/Yu77.html
+++ b/Yu77.html
@@ -96,5 +96,31 @@ Notes: N/A
 			</p>
 		
 		</div>
+		<div class="wideDiv">
+			<img src="Yu77C.png">
+			<h1 class="description">Yu-77-C</h1>
+			<p class="description">
+Yu-77-C is a Yu-77 subclass with a Christmas appearance.
+			</p>
+			<p class="description">
+			-----------------------------------------------------------------------
+			</p>
+			<p class="description">
+Last Location: ███████'█ █████
+			</p>
+			<p class="description">
+Current state: Inactive
+			</p>
+			<p class="description">
+Likes: Sandy Claws
+			</p>
+			<p class="description">
+Dislikes: N/A
+			</p>
+			<p class="description">
+Notes: Just accept her gift.
+			</p>
+		
+		</div>
 	</body>
 </html>
