--- a/Yu78.html
+++ b/Yu78.html
@@ -9,28 +9,29 @@
 			<a href="index.html"><h1>YU Archive</h1></a>
 		</header>
 		<div class="wideDiv">
-			<img src="Yu87.png">
-			<h1 class="description">Yu-87</h1>
+			<img src="Yu78.png">
+			<h1 class="description">Yu-78</h1>
 			<p class="description">
-Yu-87 is only a speculation and a myth along the "Yu species".
+Yu-78 is a type of Yu trying to blend in with the human society. Her body is soft, speculated silicone, and it's beige.
+The subject has the case of heterochromia. Mouth does not exist. She changes her clothes often and always wears a hat.
 			</p>
 			<p class="description">
 			-----------------------------------------------------------------------
 			</p>
 			<p class="description">
-Last Location: N/A
+Last Location: ███████'█ █████
 			</p>
 			<p class="description">
-Current state: N/A
+Current state: Inactive
 			</p>
 			<p class="description">
-Likes: N/A
+Likes: People
 			</p>
 			<p class="description">
-Dislikes: N/A
+Dislikes: Machines
 			</p>
 			<p class="description">
-Notes: N/A
+Notes: Blends in with humans surprisingly well.
 			</p>
 		</div>
 	</body>
