--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
 				case "19":
 				location.href = "Yu19.html"
 				break;
+				case "1294":
+				location.href = "Yu1294.html"
+				break;
+				case "25":
+				location.href = "Yu25.html"
+				break;
+				case "78":
+				location.href = "Yu78.html"
+				break;
 				case "999999":
 				location.href = "Error.html"
 				break;
