--- a/Yu77.html
+++ b/Yu77.html
@@ -6,7 +6,12 @@
 	</head>
 	<body>
 		<header>
+			<div id="Menu">
 			<a href="index.html"><h1>YU Archive</h1></a>
+			<a href="Yu.html"><h1>Young Understanding</h1></a>
+			<a href="FE.html"><h1>FrozenEmber</h1></a>
+			<a href="Gallery.html"><h1>Gallery</h1></a>
+			</div>
 		</header>
 		<div class="wideDiv">
 			<img src="Yu77.png">
