--- a/Yu01.html
+++ b/Yu01.html
@@ -15,15 +15,15 @@
 		</header>
 		<div class="wideDiv">
 			<img src="Yu01.png">
-			<h1 class="description">Yu-01</h1>
+			<h1 class="description">Yu-1</h1>
 			<p class="description">
-Yu-01 is broken beyond repair. No one has a clue what happened to her and the subject itself cannot communicate.
+Yu-1 is broken beyond repair. No one has a clue what happened to her and the subject itself cannot communicate.
 			</p>
 			<p class="description">
 			-----------------------------------------------------------------------
 			</p>
 			<p class="description">
-Last Location: ERROR
+Last Location: FED Chamber - B1
 			</p>
 			<p class="description">
 Current state: semi-active
