--- a/Yu02.html
+++ b/Yu02.html
@@ -14,29 +14,28 @@
 			</div>
 		</header>
 		<div class="wideDiv">
-			<img src="Yu78.png">
-			<h1 class="description">Yu-78</h1>
+			<img src="YuE.png">
+			<h1 class="description">Yu-2</h1>
 			<p class="description">
-Yu-78 is a type of Yu trying to blend in with the human society. Her body is soft, speculated silicone, and it's beige.
-The subject has the case of heterochromia. Mouth does not exist. She changes her clothes often and always wears a hat.
+Yu-2 appears half melted. Like Yu-1, no one has a clue what happened to Yu-2 and the subject cannot communicate.
 			</p>
 			<p class="description">
 			-----------------------------------------------------------------------
 			</p>
 			<p class="description">
-Last Location: FED Chamber - B44
+Last Location: FED Chamber - B2
 			</p>
 			<p class="description">
-Current state: Inactive
+Current state: semi-active
 			</p>
 			<p class="description">
-Likes: People
+Likes: N/A
 			</p>
 			<p class="description">
-Dislikes: Machines
+Dislikes: N/A
 			</p>
 			<p class="description">
-Notes: Blends in with humans surprisingly well.
+Notes: N/A
 			</p>
 		</div>
 	</body>
