--- a/Yu25.html
+++ b/Yu25.html
@@ -24,7 +24,7 @@ are disabled speakers. Although the subject has a mouth, it does not speak.
 			-----------------------------------------------------------------------
 			</p>
 			<p class="description">
-Last Location: ███████'█ █████
+Last Location: FED Chamber - A72
 			</p>
 			<p class="description">
 Current state: Inactive
