--- a/Yu77.html
+++ b/Yu77.html
@@ -57,7 +57,7 @@ or even scratching it.
 			-----------------------------------------------------------------------
 			</p>
 			<p class="description">
-Last Location: ███████'█ █████
+Last Location: Out of range. Estimated 25484km below sea level.
 			</p>
 			<p class="description">
 Current state: Active
@@ -85,7 +85,7 @@ but without any shine to it, enough to make it look like clay, but it has been c
 			-----------------------------------------------------------------------
 			</p>
 			<p class="description">
-Last Location: ███████'█ █████
+Last Location: FED Chamber - B63
 			</p>
 			<p class="description">
 Current state: Active
@@ -111,7 +111,7 @@ Yu-77-C is a Yu-77 subclass with a Christmas appearance.
 			-----------------------------------------------------------------------
 			</p>
 			<p class="description">
-Last Location: ███████'█ █████
+Last Location: FED Chamber - A3
 			</p>
 			<p class="description">
 Current state: Inactive
