--- a/Yu87.html
+++ b/Yu87.html
@@ -23,7 +23,7 @@ Yu-87 is only a speculation and a myth along the "Yu species".
 			-----------------------------------------------------------------------
 			</p>
 			<p class="description">
-Last Location: N/A
+Last Location: Non existent
 			</p>
 			<p class="description">
 Current state: N/A
