--- a/Yu02.html
+++ b/Yu02.html
@@ -14,7 +14,7 @@
 			</div>
 		</header>
 		<div class="wideDiv">
-			<img src="YuE.png">
+			<img src="Yu2.png">
 			<h1 class="description">Yu-2</h1>
 			<p class="description">
 Yu-2 appears half melted. Like Yu-1, no one has a clue what happened to Yu-2 and the subject cannot communicate.
